objects/Case__c.object
<CustomObject>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Date/Time Issue Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpenedDate__c</fullName>
        <label>Date/Time Opened Issue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_issue__c</fullName>
        <label>Issue type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type_issue__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{DD}.{MM}.{YY}-{0000}</displayFormat>
        <label>Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>